[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/Selector.gd" type="Script" id=1]
[ext_resource path="res://PNG/background.png" type="Texture" id=2]
[ext_resource path="res://PNG/UI/UIbg.png" type="Texture" id=3]
[ext_resource path="res://Scripts/select_plane.gd" type="Script" id=4]
[ext_resource path="res://PNG/Planes/planeRed1.png" type="Texture" id=5]
[ext_resource path="res://Font/Kenney Mini Square.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Scripts/select_ground.gd" type="Script" id=7]
[ext_resource path="res://PNG/groundDirt.png" type="Texture" id=8]
[ext_resource path="res://Scenes/UI/select_rock.gd" type="Script" id=9]
[ext_resource path="res://PNG/rock.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 6 )

[node name="Selector" type="Node"]
script = ExtResource( 1 )

[node name="bg" type="Sprite" parent="."]
modulate = Color( 0.713726, 0.713726, 0.713726, 1 )
position = Vector2( 400, 240 )
texture = ExtResource( 2 )

[node name="hbox" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -229.0
margin_top = -80.0
margin_right = 229.0
margin_bottom = 80.0

[node name="select_plane" type="NinePatchRect" parent="hbox"]
margin_right = 150.0
margin_bottom = 160.0
rect_min_size = Vector2( 150, 150 )
texture = ExtResource( 3 )
script = ExtResource( 4 )

[node name="Image" type="TextureRect" parent="hbox/select_plane"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -44.0
margin_top = -36.5
margin_right = 44.0
margin_bottom = 36.5
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="hbox/select_plane"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -60.0
margin_top = 20.0
margin_right = 60.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 1 )
text = "Plane"
align = 1

[node name="left" type="Button" parent="hbox/select_plane"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -20.0
margin_right = 36.0
text = "<"

[node name="right" type="Button" parent="hbox/select_plane"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -35.0
margin_top = -20.0
margin_right = 1.0
text = ">"

[node name="select_ground" type="NinePatchRect" parent="hbox"]
margin_left = 154.0
margin_right = 304.0
margin_bottom = 160.0
rect_min_size = Vector2( 150, 150 )
texture = ExtResource( 3 )
script = ExtResource( 7 )

[node name="Image" type="TextureRect" parent="hbox/select_ground"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = -31.0
margin_right = 55.0
margin_bottom = 31.0
rect_rotation = -0.344097
texture = ExtResource( 8 )
expand = true

[node name="Label" type="Label" parent="hbox/select_ground"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -60.0
margin_top = 20.0
margin_right = 60.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 2 )
text = "Ground"
align = 1

[node name="left" type="Button" parent="hbox/select_ground"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -20.0
margin_right = 36.0
text = "<"

[node name="right" type="Button" parent="hbox/select_ground"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -35.0
margin_top = -20.0
margin_right = 1.0
text = ">"

[node name="select_rock" type="NinePatchRect" parent="hbox"]
margin_left = 308.0
margin_right = 458.0
margin_bottom = 160.0
rect_min_size = Vector2( 150, 150 )
texture = ExtResource( 3 )
script = ExtResource( 9 )

[node name="Image" type="TextureRect" parent="hbox/select_rock"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -35.0
margin_right = 20.0
margin_bottom = 35.0
texture = ExtResource( 10 )
expand = true

[node name="Label" type="Label" parent="hbox/select_rock"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -60.0
margin_top = 20.0
margin_right = 60.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 3 )
text = "Rock"
align = 1

[node name="left" type="Button" parent="hbox/select_rock"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -20.0
margin_right = 36.0
text = "<"

[node name="right" type="Button" parent="hbox/select_rock"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -35.0
margin_top = -20.0
margin_right = 1.0
text = ">"

[node name="Button" type="Button" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 166.0
margin_bottom = 30.0
text = "<< BACK TO TITLE SCREEN"
[connection signal="mouse_entered" from="hbox/select_plane/left" to="hbox/select_plane" method="_on_left_mouse_entered"]
[connection signal="pressed" from="hbox/select_plane/left" to="hbox/select_plane" method="_on_left_pressed"]
[connection signal="mouse_entered" from="hbox/select_plane/right" to="hbox/select_plane" method="_on_right_mouse_entered"]
[connection signal="pressed" from="hbox/select_plane/right" to="hbox/select_plane" method="_on_right_pressed"]
[connection signal="mouse_entered" from="hbox/select_ground/left" to="hbox/select_ground" method="_on_left_mouse_entered"]
[connection signal="pressed" from="hbox/select_ground/left" to="hbox/select_ground" method="_on_left_pressed"]
[connection signal="mouse_entered" from="hbox/select_ground/right" to="hbox/select_ground" method="_on_right_mouse_entered"]
[connection signal="pressed" from="hbox/select_ground/right" to="hbox/select_ground" method="_on_right_pressed"]
[connection signal="mouse_entered" from="hbox/select_rock/left" to="hbox/select_rock" method="_on_left_mouse_entered"]
[connection signal="pressed" from="hbox/select_rock/left" to="hbox/select_rock" method="_on_left_pressed"]
[connection signal="mouse_entered" from="hbox/select_rock/right" to="hbox/select_rock" method="_on_right_mouse_entered"]
[connection signal="pressed" from="hbox/select_rock/right" to="hbox/select_rock" method="_on_right_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
